    numeric. so "foo" becomes "0" and "1234a" becomes "1234".

2007-03-02 cjg
 * Added a filter to eprints under review so that it only lists ones in
    buffer, not all those matching the scope.

2007-03-02 moj
 * Added platform subs for hash filename
 * Removed timestamp call from DataObj/Document.pm

2007-03-07 cjg
 * Fixed bug that meant subjects were not ordered in input.

2007-03-07 cjg
 * Fixed bug in database which returned empty strings in list of index ids.

2007-03-09 cjg
 * Fixed issue in autocompleter file and simple_file which didn't lowercase 
    keys.

2007-03-11 tdb
 * Fix typo in Platform::get_hash_name

2007-03-12 tdb
 * Moved df_dir into Platform
 * Added support for Filesys::Df, Filesys::DfPortable and df (support for more
    file system types than Filesys::DiskSpace)

2007-03-12 cjg
 * Added missing phrases mentioned in #2873

2007-03-12 cjg
 * Fixed spelling mistake in DOI import plugin volunme / volume.

2007-03-22 cjg
 * Added Comment to the Platform file
 * Added warning if exec() is not passed a repository parameter

2007-03-22 cjg
 * Fixed bug in epadmin that didn't use the groupid set in SystemSettings for
    making new repository files.

2007-03-22 cjg
 * Change to make the document roll-up always open if there's but one 
    document.

2007-03-22 cjg
 * Caused only .xml files to be loaded in phrase directories.
	
2007-03-22 cjg
 * Removed debug code from Rewrite

2007-03-22 cjg
 * Sorted out XHTML validation. Involved removing some accept-charset 
    attributes, changing forms from GET to get, changing the way css 
    works with/without javascript and adding an alt="" tag.

2007-03-22 cjg
 * Fixed bug which meant two subsequent 404's on one apache connection would
    blank the 2nd one.

2007-03-22 cjg
 * Fixed an issue which meant that after removing a user the system went to 
    an undefined screen. Now goes to the front which isn't ideal, but is 
    better.